Applied patch by "anxiety": * Tracked down the problem[1] to the wrong offset being read from the pci config.   Now matches Realtek's Linux driver. I couldn't find why it worked before as   the value hasn't changed since the original version added to the repository.   This is only verified with my own 8168 but I found no special logic in other   drivers for 8167 or 8169. [1] See #1853, "RTL8168 recognized but not working" I don't have the hardware myself to test.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26873 a95241bf-73f2-0310-859d-f6bbb57e9c96